--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                     <li class="nav-item"><a class="nav-link me-lg-5" href="boka.html">Boka</a></li>
                     <li class="nav-item"><a class="nav-link me-lg-5" href="kontakt.html">Kontakta Oss</a></li>
                     <li class="nav-item"><a class="nav-link me-lg-5" href="om.html">Om Oss</a></li>
-                    <li class="nav-item"><a class="nav-link me-lg-5" href="registrera.html">Logga in / Registrera</a></li>
+                    <li class="nav-item"><a class="nav-link me-lg-5" href="registrera.html">Logga in / Registrera</a>
+                    </li>
                 </ul>
                 <!-- <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
                         <span class="d-flex align-items-center">
@@ -52,44 +53,66 @@
     <!-- Mashead header-->
     <header class="masthead">
         <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-sm-6">
-                <div class="card">
-                  <div class="card-body">
-                      <a href="boka.html"><img src="bild1.jpg" class="card-img-top"><a/>
-                    <h5 class="card-title">Boka en barnvakt</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="boka.html" class="btn btn-primary">Go somewhere</a>
-                  </div>
+            <div class="row justify-content-center">
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <a href="boka.html"><img src="bild1.jpg" class="card-img-top"><a />
+                                <h5 class="card-title">Boka en barnvakt</h5>
+                                <p class="card-text">With supporting text below as a natural lead-in to additional
+                                    content.</p>
+                                <a href="boka.html" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <div class="col-sm-6">
-                <div class="card">
-                  <div class="card-body">
-                    <a href="registrera.html"><img src="bild2.jpg" class="card-img-top"><a/>
-                    <h5 class="card-title">Registrera dig eller logga in här!</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="registrera.html" class="btn btn-primary">Go somewhere</a>
-                  </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <a href="registrera.html"><img src="bild2.jpg" class="card-img-top"><a />
+                                <h5 class="card-title">Registrera dig eller logga in här!</h5>
+                                <p class="card-text">With supporting text below as a natural lead-in to additional
+                                    content.</p>
+                                <a href="registrera.html" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
                 </div>
-              </div>
+            </div>
         </div>
-    </div>
     </header>
     <!-- App features section-->
     <!-- Basic features section-->
     <!-- Call to action section-->
     <!-- App badge section-->
     <!-- Footer-->
-    <footer class="bg-black text-center py-5">
-        <div class="container px-5">
-            <div class="text-white-50 small">
-                <div class="mb-2">&copy; Your Website 2021. All Rights Reserved.</div>
-                <a href="#!">Privacy</a>
-                <span class="mx-1">&middot;</span>
-                <a href="#!">Terms</a>
-                <span class="mx-1">&middot;</span>
-                <a href="#!">FAQ</a>
+    <footer class="bg-dark py-4">
+        <div class="row justify-content-center">
+            <div class="row text-center">
+                <div class="col-sm-4 text-white">
+                    <h2>Kontakta Oss</h5>
+                    <p>Barnvaktsvägen 12</p>
+                    <p>623 90 Stockholm</p>
+                    <p>070-123 4567</p>
+                </div>
+
+                <div class="col-sm-4 text-white">
+                    <h2>Info</h5>
+                    <p><a href="#">FAQ</a></p>
+                    <p><a href="#">Om oss</a></p>
+                    <p><a href="#">Jobba hos oss</a></p>
+                </div>
+
+                <div class="col-sm-4 text-white">
+                    <h2>Följ Oss</h5>
+                </div>
+            </div>
+            
+            <div class="row text-white">
+                <div class="col px-4 text-start">
+                    <div>&copy; Copyright BVP</div>
+                </div>
+                <div class="col text-end">
+                    <a href="#">Cookies</a> <a href="#">Integritetspolicy</a>
+                </div>
             </div>
         </div>
     </footer>
