--- a/boka.html
+++ b/boka.html
@@ -103,9 +103,9 @@
                     </thead>
                     <tbody>
                         <tr onclick="redirect()" role="button">
-                            <td>Super snälla silver Sara</td>
+                            <td><a href="sara.html">Super snälla silver Sara</a></td>
                             <td>200kr</td>
-                            <td>&#9733;&#9733;&#9733;&#3;&#9734973;</td>
+                            <td>&#9733;&#9733;&#9733;&#9733;&#9734;</td>
                         </tr>
                         <tr>
                             <td>Mustiga Micke</td>
@@ -138,21 +138,35 @@
     <!-- Call to action section-->
     <!-- App badge section-->
     <!-- Footer-->
-    <footer class="bg-black text-center py-5">
-        <div class="container px-5">
-            <div class="text-white-50 small">
-                <div class="mb-2">&copy; Your Website 2021. All Rights Reserved.</div>
-                <a href="#!">Privacy</a>
-                <span class="mx-1">&middot;</span>
-                <a href="#!">Terms</a>
-                <span class="mx-1">&middot;</span>
-                <a href="#!">FAQ</a>
+    <footer class="bg-dark py-4">
+        <div class="row justify-content-center">
+            <div class="row text-center">
+                <div class="col-sm-4 text-white">
+                    <h2>Kontakta Oss</h5>
+                    <p>Barnvaktsvägen 12</p>
+                    <p>623 90 Stockholm</p>
+                    <p>070-123 4567</p>
+                </div>
+
+                <div class="col-sm-4 text-white">
+                    <h2>Info</h5>
+                    <p><a href="#">FAQ</a></p>
+                    <p><a href="#">Om oss</a></p>
+                    <p><a href="#">Jobba hos oss</a></p>
+                </div>
+
+                <div class="col-sm-4 text-white">
+                    <h2>Följ Oss</h5>
+                </div>
             </div>
-            <div>
-                <i class="bi bi-facebook"></i>
-                <i class="bi bi-twitter"></i>
-                <i class="bi bi-linkedin"></i>
-                <i class="bi bi-instagram"></i>
+            
+            <div class="row text-white">
+                <div class="col px-4 text-start">
+                    <div>&copy; Copyright BVP</div>
+                </div>
+                <div class="col text-end">
+                    <a href="#">Cookies</a> <a href="#">Integritetspolicy</a>
+                </div>
             </div>
         </div>
     </footer>
