--- a/sara.html
+++ b/sara.html
@@ -66,7 +66,7 @@
                     <h5>Jag är jättesnäll och tar gärna hand om dina barn när du inte kan.</h5>
                     <br/>
                     <br/>
-                    <button class="btn btn-primary" onclick="bokaformredirect()">Boka</button>
+                    <a href="form.html" class="btn btn-primary">Boka</a>
                 </div>
             </div>
         </div>
@@ -176,11 +176,6 @@
     <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 
-    <script>
-        function bokaformredirect() {
-            location.href = "form.html";
-        }
-    </script>
 </body>
 
 </html>
