--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
         <div class="container px-2">
-            <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="bi-list"></i>
             </button>
             <a class="navbar-brand fw-bold" href="index.html">{BVP}</a>
+            <a href="registrera.html">
+                <h1 id="account" class="navbar-brand bi bi-person fw-bold"></h1>
+            </a>
 
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
@@ -50,96 +53,77 @@
             </div>
         </div>
     </nav>
-    <!-- Mashead header-->
-    <header class="masthead">
+    <!-- Content -->
+    <div class="masthead">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-sm-6">
                     <div class="card">
                         <div class="card-body text-center">
-                            <a href="boka.html"><img src="bild1.jpg" class="card-img-top"><a />
-                                <h5 class="card-title">Boka en barnvakt</h5>
-                                <p class="card-text">Hos oss kan du snabbt och enkelt boka barnvakt. Välj dag och plats sedan kan du välja barnvakten som passar dina barn bäst.</p>
-                                <a href="boka.html" class="btn btn-primary">Boka barnvakt</a>
+                            <a href="boka.html"><img src="bild1.jpg" class="card-img-top"></a>
+                                <h4 class="card-title mt-3">Boka en barnvakt via BVP</h4>
+                                    <p class="card-text">Hos oss kan du snabbt och enkelt boka barnvakt. Välj dag och
+                                        plats sedan kan du välja barnvakten som passar dina barn bäst.</p>
+                                    <a href="boka.html" class="btn btn-primary mt-5">Boka barnvakt</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="card">
                         <div class="card-body text-center">
-                            <a href="registrera.html"><img src="bild2.jpg" class="card-img-top"><a />
-                                <h5 class="card-title">Registrera dig eller logga in här!</h5>
-                                <p class="card-text">För att boka barnvakt måste du skapa ett konto och fylla i uppgifter för att snabbt och smidigare kunna boka barnvakt.</p>
-                                <a href="registrera.html" class="btn btn-primary">Logga in/Registrera</a>
+                            <a href="registrera.html"><img src="bild2.jpg" class="card-img-top"></a>
+                                <h4 class="card-title mt-3">Registrera dig eller logga in här!</h4>
+                                    <p class="card-text">För att boka barnvakt måste du skapa ett konto och fylla i
+                                        uppgifter för att snabbt och smidigare kunna boka barnvakt.</p>
+                                    <a href="registrera.html" class="btn btn-primary mt-5">Logga in / Registrera</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </header>
+    </div>
     <!-- App features section-->
     <!-- Basic features section-->
     <!-- Call to action section-->
     <!-- App badge section-->
     <!-- Footer-->
     <footer class="bg-dark py-4">
-        <div class="row justify-content-center">
+        <div class="justify-content-center">
             <div class="row text-center">
                 <div class="col-sm-4 text-white">
-                    <h2>Kontakta Oss</h5>
-                    <p>Barnvaktsvägen 12</p>
-                    <p>623 90 Stockholm</p>
-                    <p>070-123 4567</p>
+                    <h2>Kontakta Oss</h2>
+                        <p>Barnvaktsvägen 12</p>
+                        <p>623 90 Stockholm</p>
+                        <p>070-123 4567</p>
                 </div>
 
                 <div class="col-sm-4 text-white">
-                    <h2>Info</h5>
-                    <p><a href="#">FAQ</a></p>
-                    <p><a href="#">Om oss</a></p>
-                    <p><a href="#">Jobba hos oss</a></p>
+                    <h2>Info</h2>
+                        <p><a href="#">FAQ</a></p>
+                        <p><a href="#">Om oss</a></p>
+                        <p><a href="#">Jobba hos oss</a></p>
                 </div>
 
-                <div class="col-sm-4 text-white">
-                    <h2>Följ Oss</h5>
-                    <i class="bi bi-facebook"></i>
-                    <i class="bi bi-twitter"></i>
-                    <i class="bi bi-linkedin"></i>
-                    <i class="bi bi-instagram"></i>
+                <div class="col-sm-3 text-white">
+                    <h2>Följ Oss</h2>
+                        <i class="bi bi-facebook" style="font-size: 2rem;">       </i>
+                        <i class="bi bi-twitter" style="font-size: 2rem;">       </i>
+                        <i class="bi bi-linkedin" style="font-size: 2rem;">      </i>
+                        <i class="bi bi-instagram" style="font-size: 2rem;">      </i>
 
                 </div>
             </div>
-            
+
             <div class="row text-white">
-                <div class="col px-4 text-start">
+                <div class="col text-start px-5">
                     <div>&copy; Copyright BVP</div>
                 </div>
-                <div class="col text-end">
+                <div class="col text-end px-4">
                     <a href="#">Cookies</a> <a href="#">Integritetspolicy</a>
                 </div>
             </div>
         </div>
     </footer>
-    <!-- Feedback Modal-->
-    <div class="modal fade" id="feedbackModal" tabindex="-1" aria-labelledby="feedbackModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header bg-gradient-primary-to-secondary p-4">
-                    <h5 class="modal-title font-alt text-white" id="feedbackModalLabel">Send feedback</h5>
-                    <button class="btn-close btn-close-white" type="button" data-bs-dismiss="modal"
-                        aria-label="Close"></button>
-                </div>
-                <div class="modal-body border-0 p-4">
-                    <!-- * * * * * * * * * * * * * * *-->
-                    <!-- * * SB Forms Contact Form * *-->
-                    <!-- * * * * * * * * * * * * * * *-->
-                    <!-- This form is pre-integrated with SB Forms.-->
-                    <!-- To make this form functional, sign up at-->
-                    <!-- https://startbootstrap.com/solution/contact-forms-->
-                    <!-- to get an API token!-->
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
